; Copyright 2014-2019 The Salish Sea MEOPAR Contributors
; and The University of British Columbia
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
;    https://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

[metadata]
name = midoss_app
version = attr: midoss_app.__version__
description = MIDOSS visualization web app
author = Ben Moore-Maley
author_email = bmoorema@eoas.ubc.ca
url = https://github.com/MIDOSS/midoss-app-dev
long_description = file: README.rst
license = Apache License, Version 2.0
platform = Linux
keywords = web pyramid pylons
classifiers =
    Development Status :: 5 - Production
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    ; see envs/environment-dev.yaml for conda environment dev installation,
    attrs
    pyramid
    pyramid_mako
    pyyaml
    requests
    sentry-sdk
    supervisor
    waitress
